# rl-mimicgen

./: .env.wandb.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  gitman.yml  justfile  pyproject.toml
config/: dppo_coffee_d0_large.json  dppo_coffee_d0_long_horizon.json  dppo_coffee_d0_xlong_horizon.json  dppo_coffee_d1_xlong_horizon.json  online_rl_coffee_awac_refactor_big.json  online_rl_coffee_stable_parallel_eval.json  online_rl_coffee_stable_v3.json  online_rl_square_awac_paper_v1.json
configs/mimicgen_tasks/: coffee_d0.yaml  coffee_d1.yaml  coffee_d2.yaml  coffee_preparation_d0.yaml  coffee_preparation_d1.yaml  hammer_cleanup_d0.yaml  hammer_cleanup_d1.yaml  kitchen_d0.yaml  kitchen_d1.yaml  mug_cleanup_d0.yaml  mug_cleanup_d1.yaml  nut_assembly_d0.yaml  pick_place_d0.yaml  square_d0.yaml  square_d1.yaml  square_d1_fast.yaml  square_d2.yaml  stack_d0.yaml  stack_d1.yaml  stack_three_d0.yaml  stack_three_d1.yaml  threading_d0.yaml  threading_d1.yaml  threading_d2.yaml  three_piece_assembly_d0.yaml  three_piece_assembly_d1.yaml  three_piece_assembly_d2.yaml  three_piece_assembly_d2_success.yaml
docs/: awac_refactor_status_2026-04-17.md  awac_technical_report.md  cli-scratch.md  cli_scratch.md  diffusion_aligned_failure_summary_2026-04-17.md  dppo_mimicgen_results.md  midterm_progress.md  official_dppo_mimicgen_workflow.md  online_rl_math.md  resumable_pipeline_plan_2026-04-23.md  rl_finetuning_design.md
patches/: mujoco_warp_epa_horizon.patch
rl_mimicgen/: __init__.py  diffusion_runtime.py
rl_mimicgen/adapters/: __init__.py  dppo_lowdim.py
rl_mimicgen/assets/coffee_machine/: coffee_machine.xml
rl_mimicgen/assets/coffee_pod/: coffee_pod.xml
rl_mimicgen/assets/panda/: panda.xml
rl_mimicgen/assets/table/: table.xml
rl_mimicgen/dppo/: __init__.py  policy.py
rl_mimicgen/dppo/config/: __init__.py  schema.py
rl_mimicgen/dppo/data/: __init__.py  convert_mimicgen.py  dataset.py  normalization.py  (+1 more)
rl_mimicgen/dppo_async/: __init__.py  async_eval.py
rl_mimicgen/dppo_warp/: __init__.py  warp_vector_env.py
rl_mimicgen/mimicgen/: __init__.py  bc_to_rl_pipeline.py  paper_bc_one_task.py  paper_bc_pipeline.py  runtime_checks.py  train_robomimic.py
rl_mimicgen/rl/: __init__.py  awac.py  awac_policy.py  config.py  diffusion_policy.py  diffusion_storage.py  dppo.py  policy.py  ppo.py  replay_buffer.py  robomimic_env.py  rsl_rl.py  storage.py  trainer.py
rl_mimicgen/rsl_rl/: __init__.py  bc_resume.py  bench_caps_ab.py  bench_caps_sweep.py  bench_jmax_audit.py  bench_num_envs.py  bench_run.py  bench_warp_knobs.py  ppo_cfg.json  robomimic_vec_env.py  test_slim_reset_object_preservation.py  test_warp_contact_parity.py  train_rl.py  warp_buffer_sizes.py
rl_mimicgen/scripts/: bench_warp_vs_nonwarp.py
rl_mimicgen/tasks/: __init__.py
scripts/: analyze_rl_logs.py  apply_vendor_patches.py  bc_to_rl_pipeline.py  cli_args.py  dppo_batch_tasks.txt  dppo_task_status.sh  eval_bc_checkpoints.py  eval_dppo_checkpoints.py  eval_online_rl.py  install_mimicgen_datasets.sh  install_missing_core_datasets.py  mimicgen_train_bc.sh  mimicgen_train_bc_aligned.sh  prepare_mimicgen_dppo_lowdim.py  prime_mimicgen_task_specs.py  run_dppo_batch_worker.sh  run_dppo_bc_to_rl.sh  run_official_dppo_mimicgen.py  run_online_rl_coffee_awac.sh  run_online_rl_coffee_awac_refactor.sh  run_online_rl_coffee_vc1.sh  train_isaac.py  train_mujoco_rl.py  train_online_rl.py  train_rl.py  usd_converter.py  verify_blackwell_env.py  verify_env.py  verify_mujoco_policy.py  view_xml.py
tests/: test_analyze_rl_logs.py  test_awac.py  test_diffusion_policy.py  test_diffusion_runtime.py  test_diffusion_storage.py  test_dppo_data.py  test_dppo_lowdim_adapter.py  test_dppo_online.py  test_dppo_policy.py  test_online_rl_config.py  test_online_rl_storage.py  test_online_rl_trainer.py  test_replay_buffer.py  test_robomimic_wrappers.py  test_run_dppo_batch_worker.py  test_run_official_dppo_mimicgen.py
(+85 files in other folders)
