[project]
name = "rl-mimicgen"
version = "0.1.0"
description = "RL + Mimicgen (Blackwell Env)"
requires-python = ">=3.10,<3.13"
dependencies = [
  "mujoco==3.6.0",
  "mujoco-warp==3.6.0",
  "cloudpickle",
  "einops==0.8.0",
  "gdown==5.2.0",
  "gym==0.22.0",
  "gymnasium",
  "hydra-core==1.3.2",
  "imageio==2.35.1",
  "omegaconf==2.3.0",
  "torch==2.7.1",
  "torchvision==0.22.1",
  "torchaudio==2.7.1",
  "tensordict",
  "tqdm==4.66.5",
  "wandb==0.26.0",
  "rsl-rl-lib==5.0.1",
  "mimicgen",
  "robosuite",
  "robomimic",
]

[dependency-groups]
tools = [
  "gitman",
  "just",
  "ipython",
  "pytest",
  "ruff"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# package this subfolder as rl_mimicgen
[tool.setuptools.packages.find]
include = ["rl_mimicgen*"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

# Local editable checkouts managed by gitman.
mimicgen = { path = "./resources/mimicgen", editable = true }
robosuite = { path = "./resources/robosuite", editable = true }
robomimic = { path = "./resources/robomimic", editable = true }
robosuite_task_zoo = { path = "./resources/robosuite-task-zoo", editable = true }
